--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,7 +24,7 @@ body {
   font-weight: 100;
   margin: 80px 0 40px 0;
   letter-spacing: 5px;
-  color: #fafafa;
+  color: #c5b391;
 }
 
 .container-work h2 {
