--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,11 +24,11 @@ body {
   font-weight: 100;
   margin: 80px 0 40px 0;
   letter-spacing: 5px;
-  color: #c5b391;
+  color: #080808;
 }
 
 .container-work h2 {
-  color: #303e59;
+  color: #c5b391;
 }
 
 .container-contact h2 {
