--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -58,11 +58,11 @@ body {
 /*---------navbar---------*/
 
 .navbar {
-  background-color: #303e59;
+  background-color: #c5b391;
 }
 
 .navbar .navbar-brand {
-  color: #fafafa;
+  color: #0f0f0f;
 }
 
 .navbar .navbar-brand {
