--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,10 +27,6 @@ body {
   color: #080808;
 }
 
-.container-work h2 {
-  color: #c5b391;
-}
-
 .container-contact h2 {
   margin-bottom: 20px;
 }
@@ -45,12 +41,12 @@ body {
 /*---------buttons---------*/
 
 .work-btn {
-  color: #303e59;
+  color: #c5b391;
   font-size: 20px;
 }
 
 .contact-btn {
-  background-color: #fafafa;
+  background-color: #c5b391;
   width: 100px;
   letter-spacing: 2px;
 }
@@ -77,7 +73,7 @@ body {
   margin-right: 5px;
   font-weight: 100;
   font-size: 12px;
-  color: #fafafa;
+  color: #0f0f0f;
 }
 
 .navbar-dark .navbar-toggler {
@@ -111,8 +107,8 @@ body {
 
 .container-about {
   min-height: 600px;
-  background-color: #303e59;
-  color: #fafafa;
+  background-color: #c5b391;
+  color: #0f0f0f;
 }
 
 .container-about p {
@@ -120,24 +116,12 @@ body {
   margin-right: 10%;
 }
 
-/*---------work---------*/
-.container-work {
-  min-height: 600px;
-  text-align: center;
-  background-color: #fafafa;
-}
-
-.container-work a {
-  letter-spacing: 3px;
-  font-size: 16px;
-}
-
 /*---------contact---------*/
 
 .container-contact {
   min-height: 600px;
-  background-color: #303e59;
-  color: #fafafa;
+  background-color: #c5b391;
+  color: #0f0f0f;
 }
 
 .container-contact p {
@@ -161,7 +145,7 @@ body {
 /*---------hovers---------*/
 
 .navbar-nav .nav-item .nav-link:hover {
-  color: #303e59;
+  color: #c5b391;
   background-color: #fafafa;
   -webkit-transition: all 0.35s ease-in-out;
   -o-transition: all 0.35s ease-in-out;
@@ -170,7 +154,7 @@ body {
 }
 
 .contact-btn:hover {
-  background-color: #303e59;
+  background-color: #c5b391;
   color: #fafafa;
   border: 2px solid #fafafa;
   -webkit-transition: all 0.35s ease-in-out;
@@ -187,19 +171,10 @@ body {
   transition: all 0.35s ease-in-out;
 }
 
-.container-work a:hover {
-  background-color: #303e59;
-  color: #fafafa;
-  -webkit-transition: all 0.35s ease-in-out;
-  -o-transition: all 0.35s ease-in-out;
-  -moz-transition: all 0.35s ease-in-out;
-  transition: all 0.35s ease-in-out;
-}
-
 /*---------icons---------*/
 
 .social-links i {
-  color: #fafafa;
+  color: #0f0f0f;
   font-size: 26px;
   padding: 10px;
 }
