--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -107,7 +107,7 @@ body {
 
 .container-about {
   min-height: 600px;
-  background-color: #c5b391;
+  background-color: #b49e72;
   color: #0f0f0f;
 }
 
