--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,7 +54,7 @@ body {
 /*---------navbar---------*/
 
 .navbar {
-  background-color: #918151;
+  background-color: #7a6c45;
 }
 
 .navbar .navbar-brand {
