color contact btn

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,7 +46,7 @@ body {
 }
 
 .contact-btn {
-  background-color: #c5b391;
+  background-color: #0f0f0f;
   width: 100px;
   letter-spacing: 2px;
 }
