--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -103,6 +103,22 @@ body {
   background-size: cover;
     }
 
+
+.container-new:after{
+  content:"";
+  position:fixed; 
+  top:0;
+  height:100vh; 
+  left:0;
+  right:0;
+  z-index:-1; 
+  background: url("../images/bg_image.jpg") no-repeat center bottom;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+    }
+
 /*---------about---------*/
 
 .container-about {
