change bgs colors

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,7 +54,7 @@ body {
 /*---------navbar---------*/
 
 .navbar {
-  background-color: #6bbf59;
+  background-color: #c5b391;
 }
 
 .navbar .navbar-brand {
@@ -107,7 +107,7 @@ body {
 
 .container-about {
   min-height: 600px;
-  background-color: #918151;
+  background-color: #c5b391;
   color: #0f0f0f;
 }
 
