--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,7 +47,7 @@ body {
 
 .contact-btn {
   background-color: #c5b391;
-  border: 2px solid #fafafa;
+  border: 2px solid #c5b391;
   width: 100px;
   letter-spacing: 2px;
 }
